# TradeBot

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/Modules/: FindSoci.cmake  FindSqlite3.cmake  Findfreeglut.cmake  Findjsoncpp.cmake  Findopenssl.cmake  Findsoci.cmake  Findzlib.cmake
src/: CMakeLists.txt  TradeBot.cpp  TradeBotConfig.h  TradeBotConfig.h.in  TradeBotUtils.cpp  TradeBotUtils.h  analyzer.cpp  analyzer.h  api.cpp  api.h  api_command.h  callback_timer.cpp  callback_timer.h  client.cpp  client.h  command.h  command_executor.cpp  command_executor.h  command_signals.cpp  command_signals.h  common.h  dump.h  executor.cpp  executor.h  generator.cpp  generator.h  imgui_glut.cpp  imgui_glut.h  order.cpp  order.h  renderer.cpp  renderer.h  signals.cpp  signals.h  timer.cpp  timer.h  utils.cpp  utils.h
src/modules/: mod_list.h  ticker_mod.cpp  ticker_mod.h
